# chess-rs

./: Cargo.toml
src/: consts.rs  location.rs  main.rs  piece.rs
