[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
# color-print = "0.3.4"
# colored = "2.0.0"
enumn = "0.1.8"
rand = "0.8.5"
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.40"

[dev-dependencies]
# criterion = "0.4"
